Update playbook with improvements

--- a/playbook/roles/django/handlers/main.yml
+++ b/playbook/roles/django/handlers/main.yml
@@ -5,4 +5,14 @@
   with_items:
     - clear_index
     - update_index
+- name: restart uwsgi
+  sudo_user: root
+  service: >
+    name=${project.name}-uwsgi
+    state=restarted
 
+- name: reload uwsgi
+  sudo_user: root
+  service: >
+    name=${project.name}-uwsgi
+    state=restarted
