--- a/playbook/roles/postgres/tasks/access.yml
+++ b/playbook/roles/postgres/tasks/access.yml
@@ -12,7 +12,16 @@
   when: not 'appservers' in group_names
   lineinfile: >
     dest=/etc/postgresql/9.1/main/pg_hba.conf
-    regexp="host ${database.name} ${database.user} ${item}\/32 trust"
-    line="host ${database.name} ${database.user} ${item}\/32 trust"
+    regexp="host ${database.name} ${database.user} ${item}/32 trust"
+    line="host ${database.name} ${database.user} ${item}/32 trust"
+  with_items: groups.get('appservers')
+  notify: restart postgresql
+
+- name: allow access to appservers
+  when: ('appservers' in group_names)
+  lineinfile: >
+    dest=/etc/postgresql/9.1/main/pg_hba.conf
+    regexp="local\s+${database.name}\s+${database.user}\s+trust"
+    line="local ${database.name} ${database.user} trust"
   with_items: groups.get('appservers')
   notify: restart postgresql
