--- a/playbook/roles/postgres/tasks/main.yml
+++ b/playbook/roles/postgres/tasks/main.yml
@@ -1,6 +1,4 @@
 ---
 - include: packages.yml
 - include: access.yml
-- sudo: yes
-  sudo_user: postgres
-  include: database.yml
+- include: database.yml
