--- a/playbook/roles/django/tasks/assets.yml
+++ b/playbook/roles/django/tasks/assets.yml
@@ -1,19 +1,18 @@
 ---
 - name: Django | Assets | Compress
   sudo_user: ${project.user}
-  shell: command=". ${project.virtualenv}bin/activate; cd ${django.root}; python ./manage.py compress --settings=${django.settings} --force"
+  shell: command=". ${project.virtualenv}bin/activate; cd ${django.root}; python ./manage.py ${item} --settings=${django.settings} --force"
+  with_items: django.post_deploy_tasks
   tags:
     - assets
     - collectstatic
     - update
-    - application
-    - django
+    - app
 
 - name: Django | Assets | Collect
   sudo_user: ${project.user}
   django_manage: >
     command=collectstatic
-    link=yes
     app_path=${django.root}
     settings=${django.settings}
     virtualenv=${project.virtualenv}
@@ -21,8 +20,8 @@
     - assets
     - collectstatic
     - update
-    - application
-    - django
+    - app
+
   notify:
     - restart nginx
     - restart uwsgi
